--- a/frontend/src/components/Register/register.css
+++ b/frontend/src/components/Register/register.css
@@ -50,22 +50,42 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
+
+.register .form .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
 
 .register .form-group {
     margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .register .form-group input {
     width: 300px;
     height: 35px;
-    padding: 5px 0px 5px 10px;
+    padding: 5px 0px 5px 45px;
     font-size: 16px;
     outline: none;
     border: none;
+}
+
+.register .form-group .icon {
+    position: absolute;
+    top: 0;
+    left: 7px;
+    font-size: 28px;
+    padding: 5px 0 0 5px;
+    color: #000000;
+    opacity: 40%;
 }
 
 .register .form-group button {
@@ -76,7 +96,7 @@
     font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .register .form span {
