--- a/frontend/src/components/Login/login.css
+++ b/frontend/src/components/Login/login.css
@@ -57,15 +57,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .login .form-group input {
     width: 300px;
     height: 35px;
-    padding: 5px 0px 5px 10px;
+    padding: 5px 0px 5px 45px;
     font-size: 16px;
     outline: none;
     border: none;
+
+}
+
+.login .form-group .icon {
+    position: absolute;
+    top: 0;
+    left: 7px;
+    font-size: 28px;
+    padding: 5px 0 0 5px;
+    color: #000000;
+    opacity: 40%;
+
 }
 
 .login .form-group button {
