--- a/frontend/src/pages/LandingPage/landingPage.css
+++ b/frontend/src/pages/LandingPage/landingPage.css
@@ -6,7 +6,7 @@
 .landing {
     display: flex;
     flex-direction: column;
-    
+
 }
 
 .wrapper-up {
@@ -30,20 +30,29 @@
     align-items: center;
     justify-content: right;
 }
+
 .button-SigIn {
-    border: 1px solid #1F4690 ;
+    border: 1px solid #1F4690;
     border-radius: 8px;
     padding: 8px;
     color: #1f4690;
     background-color: white;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 .button-SigOut {
-    border: 0px;
+    border: none;
     border-radius: 8px;
     padding: 8px;
     color: white;
     background-color: #1f4690;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.hero {
+    margin-top: 90px;
 }
 
 .judul {
@@ -68,7 +77,7 @@
     border-radius: 5px;
     background-color: #e4e3e3;
     padding: 10px;
-    width: 450px; 
+    width: 450px;
 }
 
 .button-search {
@@ -108,4 +117,3 @@
     color: #1f4690;
     margin-top: -20px;
 }
-
