--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -1,3 +1,49 @@
 .footer {
+    display: flex;
+    flex-direction: column;
     background-color: black;
+    color: white;
+}
+
+.footer-atas {
+    display: flex;
+    flex-direction: row;
+    margin-left: 40px;
+    gap: 80px;
+}
+
+.keterangan {
+    font-size: 13px;
+}
+
+.button-susbcribe {
+    border: 0px;
+    border-radius: 5px;
+    background-color: #1f4690;
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    padding: 8px;
+}
+
+.logo-footer {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-left: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.button-logo {
+    display: flex;
+    flex-direction: row;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 25px;
+    width: 25px;
+    height: 25px;
+    color: white;
+    align-items: center;
+    justify-content: center;
 }
