--- a/frontend/src/pages/LandingPage/landingPage.css
+++ b/frontend/src/pages/LandingPage/landingPage.css
@@ -23,6 +23,20 @@
     margin-top: 40px;
 }
 
+/* user */
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-right: 20px;
+}
+
+.profile img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
 .button {
     display: flex;
     flex-direction: row;
@@ -165,8 +179,19 @@
 }
 
 .logo-bawah {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     width: 100%;
+    height: 35vh;
+    position: relative;
+}
+
+.logo-bawah .img-left {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+.logo-bawah .img-right {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
