--- a/frontend/src/components/List/list-beasiswa.css
+++ b/frontend/src/components/List/list-beasiswa.css
@@ -4,23 +4,56 @@
     gap: 30px;
 }
 
-.button-list-beasiswa {
+.beasiswa {
     display: flex;
-    flex-direction: column;
-    background-color: #1f4690;
-    color: white;
-    border: 0px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 20px;
 }
 
-.beasiswa-ppg {
-    width: 200px;
-    border-radius: 10px;
-    padding: 5px;
-    
+.beasiswa-content {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    border: 1px solid;
 }
+
+.beasiswa-content img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.beasiswa-content .text {
+    background: #1F4690;
+    color: #fff;
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -100%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.beasiswa-content span {
+    margin-bottom: 30px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.beasiswa-content button {
+    border: none;
+    background: black;
+    width: 130px;
+    height: 40px;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+
+
