--- a/frontend/src/components/List/list-beasiswa.css
+++ b/frontend/src/components/List/list-beasiswa.css
@@ -1,59 +1,36 @@
 .list-beasiswa {
     display: flex;
-    flex-direction: row;
     gap: 30px;
 }
 
 .beasiswa {
-    display: flex;
-}
-
-.beasiswa-content {
     width: 300px;
-    height: 300px;
-    position: relative;
+    height: 350px;
     border: 1px solid;
-}
-
-.beasiswa-content img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.beasiswa-content .text {
-    background: #1F4690;
-    color: #fff;
-    width: 100%;
-    height: 50%;
-    padding: 10px;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    gap: 15px;
+    background-color: #1F4690;
+    justify-content: center;
 }
 
-.beasiswa-content span {
-    margin-bottom: 30px;
+.beasiswa .image {
+    width: 250px;
+    height: 250px;
+}
+
+.beasiswa .image img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    border-radius: 20px;
+}
+
+.beasiswa .text a {
+    text-decoration: none;
     font-size: 20px;
-    text-align: center;
-}
-
-.beasiswa-content button {
-    border: none;
-    background: black;
-    width: 130px;
-    height: 40px;
-    border-radius: 10px;
     color: white;
-    cursor: pointer;
-    font-size: 16px;
+    font-weight: bold;
 }
-
-
-
