--- a/frontend/src/components/List/top-category.css
+++ b/frontend/src/components/List/top-category.css
@@ -5,3 +5,12 @@
     color: #1f4690;
     margin-top: -20px;
 }
+
+.pilihan-beasiswa p a {
+    text-decoration: none;
+    color: #1f4690;
+}
+
+.pilihan-beasiswa p {
+    margin: 20px 0;
+}
