--- a/frontend/src/pages/LandingPage/landingPage.css
+++ b/frontend/src/pages/LandingPage/landingPage.css
@@ -83,10 +83,12 @@
     font-size: 70px;
     margin-bottom: -5px;
     padding-right: 50px;
+    color: #1f4690;
 }
 
 .tagline {
     font-size: 25px;
+    font-weight: 500;
     color: #1f4690;
 }
 
