--- a/frontend/src/pages/ProfilPage/profilPage.css
+++ b/frontend/src/pages/ProfilPage/profilPage.css
@@ -28,7 +28,7 @@
     align-items:center;
     justify-content: right;
     gap: 10px;
-    width: 700px;
+    width: 780px;
 }
 
 .wrapper-isi-profile {
@@ -52,6 +52,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 300px;
 
 }
 
@@ -64,20 +65,35 @@
     border-radius: 10px;
     /* justify-content: center; */    
     padding: 10px;
+    gap: 15px;
+}
+
+.asal-user {
+    font-size: 13px;
+    margin-top: -10px;
 }
 
 .pengatran-user {
+    display: flex;
+    flex-direction: column;
     background-color: #1F4690;
     border: 0px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
+}
+
+.pengatran-user-1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
 }
 
 .isi-profil {
     background-color: #1F4690;
     border: 0px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
 }
 
 .keterangan-isi-profil {
