--- a/frontend/src/pages/Index/indexAdmin.css
+++ b/frontend/src/pages/Index/indexAdmin.css
@@ -146,9 +146,9 @@
     padding: 8px;
 }
 
-.konten-grafik {
+/* .konten-grafik {
     background-color: #b3b3b3;
-}
+} */
 /* .icon-search {
     position: absolute;
     top: 0;
