--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -40,6 +40,11 @@
     gap: 10px;
 }
 
+.login .left .logo img {
+    width: 50px;
+    height: 50px;
+}
+
 
 .login .right {
     background: var(--primary-color);
