--- a/frontend/src/pages/Register/register.css
+++ b/frontend/src/pages/Register/register.css
@@ -40,6 +40,11 @@
     gap: 10px;
 }
 
+.register .left .logo img {
+    width: 50px;
+    height: 50px;
+}
+
 
 .register .form {
     width: 400px;
