--- a/frontend/src/pages/Dashboard/dashboard.css
+++ b/frontend/src/pages/Dashboard/dashboard.css
@@ -5,3 +5,56 @@
 .content {
     flex: 4;
 }
+
+.top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 3em;
+    width: 100%;
+    height: 80px;
+    border-bottom: 1px solid;
+}
+
+.top .dashboard-header h1 {
+    margin: 0;
+}
+
+.top .dashboard-header p {
+    margin: 0;
+}
+
+.top .search-and-button {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.top .search-and-button input {
+    width: 200px;
+    height: 30px;
+    padding-left: 15px;
+    outline: none;
+    border-radius: 6px;
+    background-color: #F2F2F2;
+    border: none;
+}
+
+.top .search-and-button input::placeholder {
+    color: #888888;
+}
+
+.top .search-and-button button {
+    height: 30px;
+    border: none;
+    background-color: #F2F2F2;
+    color: #888888;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.bottom {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
