--- a/frontend/src/components/Hero/hero.css
+++ b/frontend/src/components/Hero/hero.css
@@ -2,30 +2,36 @@
     display: flex;
 }
 
-.left,
-.right {
+.hero .left,
+.hero .right {
     flex: 1;
 }
 
-.left img {
+.hero .left img {
     width: 100%;
     height: 100%;
 }
 
-.right {
+.hero .right {
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
     padding-top: 90px;
+    gap: 20px;
 }
 
-.right .top h1 {
+.hero .right .top {
+    display: block;
+    padding: 0;
+}
+
+.hero .right .top h1 {
     font-size: 50px;
     color: #1f4690;
     margin: 0;
 }
 
-.right .top span {
+.hero .right .top span {
     margin: 0;
     color: #1f4690;
     display: block;
@@ -33,14 +39,14 @@
     margin: 10px 0;
 }
 
-.right .search-hero {
+.hero .right .search-hero {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
 
-.right .search-hero input {
+.hero .right .search-hero input {
     width: 400px;
     height: 35px;
     padding-left: 10px;
@@ -49,7 +55,7 @@
     background: #E4E3E3;
 }
 
-.right .search-hero button {
+.hero .right .search-hero button {
     background: #1f4690;
     height: 35px;
     width: 50px;
@@ -62,11 +68,10 @@
     cursor: pointer;
     border: none;
     border-radius: 5px;
-
 }
 
 
-.right .bottom {
+.hero .right .bottom {
     display: flex;
     align-items: center;
     gap: 5px;
