--- a/frontend/src/pages/ProfilPage/profilPage.css
+++ b/frontend/src/pages/ProfilPage/profilPage.css
@@ -1,110 +1,140 @@
-.wrapper-profilPage {
+.Profile-Page {
+    width: 100%;
+    height: 100%;
+}
+
+ul,
+li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.Profile-Page ul {
     display: flex;
     flex-direction: column;
-}
-
-.header-profilPage {
-    display: flex;
-    flex-direction: row;
-    margin-left: 40px;
-}
-
-.header-kiri-profilPage {
-    display: flex;
-    flex-direction: column;
-    color: #1F4690;
-}
-
-.logo-RB {
-    width: 25px;
-}
-
-.tagLine {
-    margin-top: -20px;
-}
-
-.username {
-    display: flex;
-    flex-direction: row;
-    align-items:center;
-    justify-content: right;
-    gap: 10px;
-    width: 780px;
-}
-
-.wrapper-isi-profile {
-    display: flex;
-    flex-direction: column;
-    align-items:center;
     justify-content: center;
-    margin-bottom: 50px;
+    gap: 20px;
 }
 
-.wrapper-isi-profile h1{
+.Profile-Page li {
+    display: flex;
+    align-items: center;
+    border: 1px solid;
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.Profile-Page li:hover {
+    background-color: #fff;
     color: #1F4690;
 }
 
-.pemisah-profile {
+.Profile-Page li .icon {
+    font-size: 30px;
+    margin-right: 10px;
+}
+
+.Profile-Page .profile {
+    width: 100%;
+    height: 100vh;
     display: flex;
-    flex-direction: row;
-    /* background-color: #1F4690; */
-    color: white;
+    margin-bottom: 30px;
+}
+
+.profile .left {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.profile .left {
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    padding-top: 90px;
     gap: 30px;
-
 }
 
-.pemisah-user {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.profile .left .box {
     width: 300px;
-
-}
-
-.user {
-    display: flex;
-    flex-direction: row;
+    height: 80px;
     background-color: #1F4690;
-    align-items: center;
-    border: 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 1em;
     border-radius: 10px;
-    /* justify-content: center; */    
-    padding: 10px;
-    gap: 15px;
+    color: #fff;
 }
 
-.asal-user {
-    font-size: 13px;
-    margin-top: -10px;
+.profile .left .box:nth-last-child(1) {
+    width: 300px;
+    height: 200px;
+    display: flex;
+    gap: 30px;
 }
 
-.pengatran-user {
+.profile .left .box h1 {
+    font-size: 18px;
+    font-weight: normal;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.profile .left .box p {
+    margin: 0;
+}
+
+.profile .right {
+    flex: 2;
     display: flex;
     flex-direction: column;
-    background-color: #1F4690;
-    border: 0px;
-    border-radius: 10px;
-    padding: 15px;
-}
-
-.pengatran-user-1 {
-    display: flex;
-    flex-direction: row;
     align-items: center;
-    gap: 15px;
 }
 
-.isi-profil {
-    background-color: #1F4690;
-    border: 0px;
+.profile .right .box-right {
+    width: 600px;
+    height: 100%;
+    background: #1F4690;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    gap: 20px;
+}
+
+.box-right .form-group {
+    width: 500px;
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    gap: 10px;
+}
+
+.box-right .form-group input {
+    height: 100%;
+    border: none;
+    outline: none;
     border-radius: 10px;
-    padding: 20px;
+    padding-left: 10px;
+    background-color: #FFF2F2;
 }
 
-.keterangan-isi-profil {
-    background-color: #627aad;
-    width: 700px;
-    border: 0px;
-    border-radius: 5px;
-    padding: 8px;
+.box-right button {
+    width: 100px;
+    height: 30px;
+    border: none;
+    border-radius: 10px;
+    background-color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
 }
