--- a/frontend/src/pages/ProfilPage/profilPage.css
+++ b/frontend/src/pages/ProfilPage/profilPage.css
@@ -59,19 +59,37 @@ li {
 }
 
 .profile .left .box {
-    width: 300px;
+    width: 350px;
     height: 90px;
+    gap: 10px;
     background-color: #1F4690;
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    padding: 2em;
     border-radius: 10px;
     color: #fff;
+    align-items: center;
 }
 
+.profile .left .box .image {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+.profile .left .box .image img {
+    width: 100%;
+    height: 100%;
+}
+
+
+.profile .left .box.text {
+    display: flex;
+    flex-direction: column;
+}
+
+
 .profile .left .box:nth-last-child(1) {
-    width: 300px;
+    width: 350px;
     height: 200px;
     display: flex;
     gap: 30px;
